--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    {% if page.additional_styles %}
+      {% for style in page.additional_styles%}
+        <link rel="stylesheet" href="/assets/css/{{ style }}.css">
+      {% endfor %}
+    {% endif %}
   </head>
   <body>
     {{ content }}
