--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap');
 
+$backgroundColor: #293136;
+
 body {
-  background: #ffffff;
+  background: $backgroundColor;
   color: #000000;
-  font-family: "Raleway",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";;
+  font-family: "Raleway",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  width: 100%;
+  min-height: 100vh;
+  padding: 0px;
+  margin: 0px;
 }
+
+#container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding-bottom: 4em;
+}
+@media screen and (max-width: 1280px) {
+	#container {
+		width: 90%;
+	}
+}
+
+
+@import "components/brand";
