add navbar with homepage link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <div id="container">
       <header>
         {% include brand.html %}
+        {% include navbar.html %}
       </header>
       {{ content }}
     </div>
