add rainbow bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,12 @@
         {% include brand.html %}
         {% include navbar.html %}
       </header>
-      {{ content }}
+      <main>
+        {{ content }}
+      </main>
+      <footer>
+        {% include rainbow.html %}
+      </footer>
     </div>
   </body>
 </html>
