--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         {{ content }}
       </main>
       <footer>
+        {% include footer.html %}
         {% include rainbow.html %}
       </footer>
     </div>
