--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -26,6 +26,6 @@ body {
 
 @import "components/brand";
 @import "components/navbar";
-@import "components/main";
+@import "components/whoami";
 @import "components/footer";
 @import "components/rainbow";
