--- a/_sass/components/main.scss
+++ b/_sass/components/main.scss
@@ -15,20 +15,18 @@ main {
         line-height: 1.2;
     }
     h2 {
-        font-size: 1.2em;
-        font-weight: 300;
-        line-height: 1.2;
-    }
-    h3 {
-        padding-bottom: 1em;
-        border-bottom: solid 2px rgba(255, 255, 255, 0.125);
         font-size: 1.5em;
         font-weight: 400;
         line-height: 1.2;
     }
+    h3 {
+        font-size: 1.2em;
+        font-weight: 300;
+        line-height: 1.2;
+    }
 
     p {
-        margin: 1em 0 2em 0;
+        margin: 1rem 0 1rem 0;
     }
     a {
         -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
@@ -68,7 +66,11 @@ main {
         border-bottom: solid 2px rgba(255, 255, 255, 0.125);
     }
     ul {
+        margin: 0.5rem;
         list-style: none;
+        li::before {
+            content: "- ";
+        }
     }
     b {
         font-weight: 600;
@@ -89,6 +91,12 @@ main {
             line-height: 0.2rem;
             display: block;
             margin: 0.5rem 0;
+        }
+        ul {
+            padding-left: 8px;
+        }
+        .mobile-hidden {
+            display: none;
         }
     }
 }
