--- a/_sass/components/footer.scss
+++ b/_sass/components/footer.scss
@@ -33,7 +33,7 @@ footer {
         border-color: rgba(255, 255, 255, 0.3);
     }
     .copy {
-        color: #bec9cf;
+        color: #d0dbe0;
         text-decoration: none;
         margin: 8px;
         text-align: center;
