revamp css imports

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,4 +1,10 @@
 ---
 ---
 
-@import "index";
+@import "main";
+
+@import "components/brand";
+@import "components/navbar";
+@import "components/whoami";
+@import "components/footer";
+@import "components/rainbow";
