--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,3 +2,9 @@
 ---
 
 @import "main";
+
+@import "components/brand";
+@import "components/navbar";
+@import "components/main";
+@import "components/footer";
+@import "components/rainbow";
