add book template and bpd page

--- a/_sass/book.scss
+++ b/_sass/book.scss
@@ -2,11 +2,11 @@
 
 body {
     background-color: #f4f2e8;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 main {
     max-width: 720px;
-    font-family: 'Nunito Sans', sans-serif;
     padding: 1rem 0.5rem 1rem 0.5rem;
     margin: 3rem auto 3rem auto;
     line-height: 1.8;
@@ -47,4 +47,8 @@ a {
 }
 a:hover {
     border-bottom: dotted 1px rgba(128,128,128,1);
+}
+
+header, footer {
+    display: none;
 }
