--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,20 +1,9 @@
-@font-face {
-  font-family: "Raleway";
-  src: url("/assets/fonts/Raleway-VariableFont_wght.ttf");
-}
-
-@font-face {
-  font-family: "Raleway";
-  src: url("/assets/fonts/Raleway-Italic-VariableFont_wght.ttf");
-  font-style: italic;
-}
-
 $backgroundColor: #293136;
 
 body {
   background: $backgroundColor;
   color: #000000;
-  font-family: "Raleway",-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif;
   width: 100%;
   min-height: 100vh;
   padding: 0px;
