--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,9 +1,24 @@
 $backgroundColor: #293136;
+$ff-sans:
+    system-ui, -apple-system, BlinkMacSystemFont, // San Francisco on macOS and iOS
+    "Segoe UI", // Windows
+    "Ubuntu", // Ubuntu
+    "Roboto", "Noto Sans", "Droid Sans", // Chrome OS and Android with fallbacks
+    sans-serif; // The final fallback for rendering in sans-serif.
+$ff-serif: Georgia, Cambria, "Times New Roman", Times, serif;
+$ff-mono:
+    ui-monospace, // San Francisco Mono on macOS and iOS
+    "Cascadia Mono", "Segoe UI Mono", // Newer Windows monospace fonts that are optionally installed. Most likely to be rendered in Consolas
+    "Ubuntu Mono", // Ubuntu
+    "Roboto Mono", // Chrome OS and Android
+    Menlo, Monaco, Consolas, // A few sensible system font choices
+    monospace; // The final fallback for rendering in monospace.
 
 body {
+  
   background: $backgroundColor;
   color: #000000;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif;
+  font-family: $ff-sans;
   width: 100%;
   min-height: 100vh;
   padding: 0px;
