--- a/_sass/components/footer.scss
+++ b/_sass/components/footer.scss
@@ -5,7 +5,7 @@ footer {
 	text-align: left;
     letter-spacing: 0.04em;
     line-height: 1.5em;
-    font-family:'Raleway', sans-serif;
+    font-family: $ff-sans;
     font-weight: 300;
     font-size: 16px;
     display: flex;
