--- a/_sass/components/whoami.scss
+++ b/_sass/components/whoami.scss
@@ -5,11 +5,11 @@
 	text-align: center;
     color: #fff;
     letter-spacing: 0.05em;
-    font-family: 'PT Sans', sans-serif;
+    font-family: $ff-sans;
     .description {
         line-height: 1.8rem;
-        font-size: 1.2rem;
-        text-shadow: 0 5px 1px #2f363c;
+        font-size: 1.5rem;
+        text-shadow: 2px 8px 2px #2f363c;
     }
     .description::selection{
         text-shadow: none;
@@ -25,7 +25,7 @@
     .profilebutton {
         font-size: 1.2rem;
         letter-spacing: 1px;
-        font-weight: 500;
+        font-weight: 600;
         border: none;
         font-size: 1.6em;
         box-shadow: 0 4px 0 0 #2f363c;
