--- a/_includes/brand.html
+++ b/_includes/brand.html
@@ -6,5 +6,6 @@
     <a href="{{ '/' | relative_url}}">Galen Guyer</a>
     {%- endif -%}
     </h1>
-    <span class="description">Full-Stack Software Engineer</span>
+    <div class="description">Full-Stack Software + DevOps Engineer</div>
+    <div class="pronouns">they/them</div>
 </div>
