update footer source link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div style='width: 100%; text-align: center; display: block;'>
-    <div class='copy'>&copy; 2021 Galen Guyer <a href="https://github.com/galenguyer/galenguyer.com">(Source)</a></div>
+    <div class='copy'>&copy; 2021 Galen Guyer <a href="https://github.com/galenguyer/galenguyer.github.io">(Source)</a></div>
 </div>
