--- a/_sass/book.scss
+++ b/_sass/book.scss
@@ -34,6 +34,15 @@ img {
     text-align: center;
     color: #888888;
     text-decoration: none;
+    word-wrap: normal;
+}
+
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: normal;           /* Internet Explorer 5.5+ */
 }
 
 a {
