Fix rainbow noscript CSS

--- a/_includes/rainbow.html
+++ b/_includes/rainbow.html
@@ -1,11 +1,11 @@
 <div id="rainbow">
     <noscript>
-        <span class="color" style="background-color: #FF0018;"></span>
-        <span class="color" style="background-color: #FFA52C;"></span>
-        <span class="color" style="background-color: #FFFF41;"></span>
-        <span class="color" style="background-color: #008018;"></span>
-        <span class="color" style="background-color: #0000F9;"></span>
-        <span class="color" style="background-color: #86007D;"></span>
+        <div class="color" style="background: #FF0018;"></div>
+        <div class="color" style="background: #FFA52C;"></div>
+        <div class="color" style="background: #FFFF41;"></div>
+        <div class="color" style="background: #008018;"></div>
+        <div class="color" style="background: #0000F9;"></div>
+        <div class="color" style="background: #86007D;"></div>
     </noscript>
 </div>
 <script>
