minor updates of links and stuff

--- a/_includes/brand.html
+++ b/_includes/brand.html
@@ -7,5 +7,5 @@
     {%- endif -%}
     </h1>
     <div class="description">Full-Stack Software + DevOps Engineer</div>
-    <div class="pronouns">they/them</div>
+    <div class="pronouns">they/it</div>
 </div>
